force-app/main/default/objects/slackv2__Subscription_Object__c/slackv2__Subscription_Object__c.object-meta.xml
<CustomObject>
    <label>Subscription Object</label>
    <nameField>
        <label>Subscription Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>