force-app/main/default/objects/slackv2__Subscription_Object__c/fields/slackv2__Activated__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activated</label>
    <type>Checkbox</type>
</CustomField>