force-app/main/default/objects/slackv2__Subscription_Object__c/fields/slackv2__Api_Name__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Api_Name__c</fullName>
    <label>Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>